Move unthemed post styling to stylesheet

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -288,6 +288,9 @@ h2.quote::before {
 h2.quote::after {
 	content: "”";
 }
+a.link {
+	display: block;
+}
 a.link blockquote {
 	font-weight: normal;
 }
