Move link title/host separation to CSS
Fixes an issue where link hosts would overflow by themselves with a 1em gap between the start of the line and the start of the text

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -294,6 +294,9 @@ a.link {
 a.link blockquote {
 	font-weight: normal;
 }
+span.linktitle {
+	margin-right: 1em;
+}
 span.linkhost {
 	display: inline-block;
 }
