--- a/Vision Core.css
+++ b/Vision Core.css
@@ -346,16 +346,18 @@ span.linkhost {
 	font-size: 2em;
 }
 .npf-link-block .poster {
+	display: flex;
+	align-items: center;
 	border-radius: 5px 5px 0 0;
 	height: 250px;
 	margin: -1em -1em 0;
+	padding: 1em;
 	background-size: cover;
 	background-position: 50%;
+	box-shadow: inset 0 0 250px;
 }
 .npf-link-block .poster .title {
 	text-align: center;
-	position: relative;
-	top: 50%;
 }
 .npf-link-block .site-name::after {
 	content: " \00BB";
