--- a/Vision Plain.css
+++ b/Vision Plain.css
@@ -2,38 +2,35 @@ article {
 	color: black;
 	background-color: white;
 }
-article a, 
+article a {
+	color: black;
+	text-decoration: underline;
+}
+.npf-link-block a,
+.user a {
+	text-decoration: none;
+}
+article header a,
+article footer a,
+.reblog-icon,
+.like_button,
+.reblog_button {
+	color: #a7a7a7;
+	font-weight: bold;
+	text-decoration: none;
+}
 article header time a {
 	color: black;
 	font-weight: normal;
 	text-decoration: underline;
 }
-article header a,
-article footer a,
-.like_button, .reblog_button {
-	color: #a7a7a7;
-	font-weight: bold;
-	text-decoration: none;
-}
-span.reblog-icon {
-	color: #a7a7a7;
-}
-a.link {
-	text-decoration: none;
-}
-a.link h3 {
-	color: black;
-	text-decoration: underline;
-}
-a.link blockquote {
-	color: black;
-}
-div.answerbox {
-	border: 1px solid gray;
-}
-blockquote, li.note .answer_content {
-	border-left: 3px solid #eeeeee;
-}
 li.note a {
 	color: black;
+}
+blockquote,
+li.note .answer_content {
+	border-color: rgba(0,0,0,0.1);
+}
+.ask-item > div {
+	background: rgba(0,0,0,0.1);
 }
