--- a/Vision Core.css
+++ b/Vision Core.css
@@ -128,8 +128,11 @@ p.datetime {
 	margin: 0.416666667em 0;
 }
 
-article section.media:first-child h1 {
-	margin-top: calc(0.67em - 15px);
+article section.media:first-child {
+	margin-top: -15px;
+}
+article section.media:last-child {
+	margin-bottom: -15px;
 }
 
 .tmblr-lightbox .lightbox-image {
