--- a/Vision Plain.css
+++ b/Vision Plain.css
@@ -19,7 +19,7 @@ article footer a,
 	font-weight: bold;
 	text-decoration: none;
 }
-article header time a {
+.timestamp a {
 	color: black;
 	font-weight: normal;
 	text-decoration: underline;
