--- a/Vision Core.css
+++ b/Vision Core.css
@@ -3,11 +3,11 @@
 	font-style: normal;
 	font-weight: normal;
 	src:
-		url("https://assets.tumblr.com/fonts/tumblr-icons/tumblr-icons_1a292352282f4fc706b9015c01cab89b.eot?v=255d51561b94b41f519bec1057040385#iefix") format("embedded-opentype"),
-		url("https://assets.tumblr.com/fonts/tumblr-icons/tumblr-icons_1a292352282f4fc706b9015c01cab89b.woff2?v=437de2a7666024f9a48f8fe7e703fd74") format("woff2"),
-		url("https://assets.tumblr.com/fonts/tumblr-icons/tumblr-icons_1a292352282f4fc706b9015c01cab89b.woff?v=79e9acb0cd8e91854b0f0520501ecd6f") format("woff"),
-		url("https://assets.tumblr.com/fonts/tumblr-icons/tumblr-icons_1a292352282f4fc706b9015c01cab89b.ttf?v=9b36135a7b59c72e0fe7118ab69259b8") format("truetype"),
-		url("https://assets.tumblr.com/fonts/tumblr-icons/tumblr-icons_1a292352282f4fc706b9015c01cab89b.svg?v=9fab8e7811a16a260fcf8b3770762df8#tumblr-icons") format("svg");
+		url("https://static.tumblr.com/2wliono/TPhpui34m/tumblr-icons.eot?#iefix") format("embedded-opentype"),
+		url("https://static.tumblr.com/2wliono/zm9pui35n/tumblr-icons.woff2") format("woff2"),
+		url("https://static.tumblr.com/2wliono/Hlqpui35f/tumblr-icons.woff") format("woff"),
+		url("https://static.tumblr.com/2wliono/2gspui356/tumblr-icons.ttf") format("truetype"),
+		url("https://static.tumblr.com/2wliono/qq2pui34y/tumblr-icons.svg#tumblr-icons") format("svg");
 }
 * {
 	max-width: 100%;
