improve default page background
- if a background image is not specified, the title colour is laid over 
the page background at 10% opacity to create contrast with the page 
elements
- removes code that assumes the sidebar background will not contrast 
with the page background
- changes how the title and accent css variables are constructed

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -15,10 +15,11 @@
   --post-width: 530px;
   --post-margin: 15px;
   --post-padding: 15px;
-}
 
-body {
-  font-size: 14px;
+  --title: rgb(var(--rgbtitle));
+  --accent: rgb(var(--rgbaccent));
+
+  --title-10percent: rgba(var(--rgbtitle), 0.1);
 }
 
 /* Global */
@@ -36,6 +37,18 @@ pre {
 }
 
 /* Overall layout */
+
+body {
+  font-size: 14px;
+  background-color: var(--background);
+  background-image: linear-gradient(var(--title-10percent), var(--title-10percent));
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+
+  color: var(--title);
+  font-family: var(--font-family);
+}
 
 #base-container {
   display: flex;
