--- a/Vision Core.css
+++ b/Vision Core.css
@@ -160,9 +160,19 @@ main {
 #header {
   display: block;
   height: 140px;
+  margin-top: calc(-1em - (var(--sidebar-padding) * 2));
+}
+
+#header.stretch {
   width: 100%;
   object-fit: cover;
-  margin-top: calc(-1em - (var(--sidebar-padding) * 2));
+}
+
+#header.no-stretch {
+  box-sizing: border-box;
+  padding: calc(1em + (var(--sidebar-padding) * 2));
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #avatar {
@@ -212,7 +222,7 @@ main {
 /* Navigation */
 
 nav {
-  padding: 0 var(-sidebar-padding);
+  padding: 0 var(--sidebar-padding);
   margin-top: var(--sidebar-padding);
 }
 
