only show search bar on blogs with search enabled
so much for a javascript-free theme! but the search bar is always 
visible if the user has scripts disabled

--- a/Vision Core.css
+++ b/Vision Core.css
@@ -136,6 +136,10 @@ main {
   padding: 0 var(--sidebar-padding);
 }
 
+#search:not(.search-enabled) {
+  visibility: hidden;
+}
+
 #search::before {
   content: "\EA0B";
   font-family: "optica-icons";
